[gd_scene load_steps=4 format=2]

[ext_resource path="res://TestSave.gd" type="Script" id=1]
[ext_resource path="res://form/Form.tscn" type="PackedScene" id=2]
[ext_resource path="res://theme/minimal_theme.tres" type="Theme" id=3]

[node name="TestSave" type="Node2D"]

script = ExtResource( 1 )
original_form = ExtResource( 2 )

[node name="Form" parent="." index="0" instance=ExtResource( 2 )]

[node name="StaticUI" type="CanvasLayer" parent="." index="1"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="SaveButton" type="Button" parent="StaticUI" index="0"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -160.0
margin_top = 110.0
margin_right = 183.0
margin_bottom = 228.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Save"
flat = false
align = 1
_sections_unfolded = [ "Theme" ]

[node name="NameEdit" type="LineEdit" parent="StaticUI" index="1"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -200.0
margin_top = 10.0
margin_right = 215.0
margin_bottom = 96.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 3 )
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Theme" ]

[node name="FileList" type="Label" parent="StaticUI" index="2"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -315.0
margin_top = -560.0
margin_right = 315.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 3 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[connection signal="pressed" from="StaticUI/SaveButton" to="." method="_on_SaveButton_pressed"]


